# Computacion_Grafica_2021_II

./: README.md  fragmentShader.shader  main.cpp  manual.txt  shader.cpp  stb_image.h
src/final/: CMakeLists.txt  README.md  manual.txt
src/final/lib/: solver.cpp  solver.h
